--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@turf/turf": "^5.1.6",
     "express": "^4.16.4"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/deibid/wander-compass-web"
+  },
   "devDependencies": {
     "nodemon": "^1.18.11"
   }
