added socket as dep

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@turf/turf": "^5.1.6",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "socket.io": "^1.7.3"
   },
   "repository": {
     "type": "git",
